fields for anime change request appears correctly on small devices

--- a/src/ui/src/app/shared/components/request-dialog/request-dialog.component.css
+++ b/src/ui/src/app/shared/components/request-dialog/request-dialog.component.css
@@ -20,4 +20,8 @@ mat-dialog-actions {
     margin: 5px 0;
     width: 100%;
   }
+
+  div.flex {
+    flex-direction: column;
+  }
 }
